# lseg-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
lseg_challenge/: lightshow.py
tests/: test_lightshow.py
