[tool.poetry]
name = "lseg-challenge"
version = "0.1.0"
description = "A coding interview challenge for the London Stock Exchange Group."
authors = [
    "Jordan Barlow <jk.barlow@icloud.com>",
]
readme = "README.md"
packages = [{include = "lseg_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.1"
jupyter = "^1.0.0"


[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "missing-function-docstring",
  "invalid-name"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
